Finish page-layout

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,4 +1,7 @@
 <% provide(:title, "Top") %>
 
-<h1>ゲーム大会進行管理システム</h1>
-<p>ゲーム進行に関する手続きをオンライン上で完結しましょう。</p>
+<div class="center jumbotron">
+  <h1>ゲーム大会進行管理システム</h1>
+  <p>ゲーム進行に関する手続きをオンライン上で完結しましょう。</p>
+  <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
