--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,12 +9,7 @@
   text-align: center;
 }
 
-/* ユーザー情報テーブル */
-
-.user-table {
-  vertical-align: middle;
-  text-align: center;
-}
+/* 入力フォーム */
 
 .label-signup {
   margin-top: 5px;
@@ -22,4 +17,20 @@
 
 .btn-signup {
   margin-top: 10px;
+}
+
+.label-user--edit {
+  margin-top: 5px;
+}
+
+.btn-user--edit {
+  margin-top: 10px;
+}
+
+/* ユーザー一覧ページ */
+
+#table-users {
+  td {
+    vertical-align: middle;
+  }  
 }
