Finish japanization-and-time-format

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -3,5 +3,5 @@
 <div class="center jumbotron">
   <h1>ゲーム大会進行管理システム</h1>
   <p>ゲーム進行に関する手続きをオンライン上で完結しましょう。</p>
-  <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
