トップ画面雛形

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
                                'data-turbolinks-track': 'reload' %>
     <!-- HTML shimがこの1行で収まる -->
     <%= render 'layouts/shim' %>
+    
+    <style type="text/css">
+	    <!--
+	      body {
+	        background-color: #223;
+	      }
+	      
+	      div.container {
+	        color: #fff;
+	      }
+	    -->
+	  </style>
   </head>
 
   <body>
