--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,7 +1,14 @@
 <% provide(:title, "Top") %>
 
-<div class="center jumbotron">
-  <h1>ゲーム大会進行管理システム</h1>
-  <p>ゲーム進行に関する手続きをオンライン上で完結しましょう。</p>
-  <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-primary" %>
+<div class="center jumbotron" style="background-color:#22222a">
+  <h1>スマブラ大会進行管理システム</h1>
+  <p>大会進行に関する手続きをオンライン上で完結しましょう。</p>
+  <% if logged_in? %>
+    <%= link_to "新しく大会を作る", '#', class: "btn btn-lg btn-success" %>
+    <%= link_to "大会に参加する", '#', class: "btn btn-lg btn-primary" %>
+  <% else %>
+    <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "ログイン", '#', class: "btn btn-lg btn-primary" %>
+  <% end %>
+  <%= link_to "現在開催中の大会を見る", '#', class: "btn btn-lg btn-primary" %>
 </div>
