--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, @user.name) %>
 <div>
+  <!--
   <table class="table table-bordered table-condensed user-table">
     <tr>
       <td>時間管理表</td>
@@ -10,9 +11,14 @@
 
     <tr>
       <td>所属</td>
-      <td>名前：<%= @user.name %></td>
+      <td>名前：<%#= @user.name %></td>
       <td>出勤日数</td>
       <td>月末日</td>
     </tr>
   </table>
+  !-->
+  
+  <%= link_to "新しく大会を作る", '#', class: "btn btn-lg btn-success" %>
+  <%= link_to "大会に参加する", '#', class: "btn btn-lg btn-primary" %>
+  <div>現在参加中の大会</div>
 </div>
