--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
   </table>
   !-->
   
-  <%= link_to "新しく大会を作る", '#', class: "btn btn-lg btn-success" %>
+  <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-lg btn-success" %>
   <%= link_to "大会に参加する", '#', class: "btn btn-lg btn-primary" %>
   <div>現在参加中の大会</div>
 </div>
