--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,13 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
+    
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all',
                                'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application',
                                'data-turbolinks-track': 'reload' %>
+    <!--<link rel="stylesheet" href="build/css/bootstrap-datetimepicker.min.css"> !-->
     <!-- HTML shimがこの1行で収まる -->
     <%= render 'layouts/shim' %>
     
@@ -19,13 +21,21 @@
 	      div.container {
 	        color: #fff;
 	      }
-	    -->
+	      
+	      select {
+	        background-color: #223;
+	      }
+	      
+	     .form-control:valid {
+          background-color: #223!important;
+          color: #fff;
+        }
+	    !-->
 	  </style>
   </head>
 
   <body>
     <%= render 'layouts/header' %>
-    </header>
     <div class="container">
       <% flash.each do |message_type, msg| %>
         <div class="alert alert-<%= message_type %>"><%= msg %></div>
