finish register-character-ajax

--- a/app/assets/stylesheets/characters.scss
+++ b/app/assets/stylesheets/characters.scss
@@ -21,6 +21,6 @@ div.selected {
   }
 }
 
-#title-one, #title-two, #title-three, #title-four, #title-five {
-  display: none;
+#title-one {
+  margin-top: 200px;
 }
