暫定的画像選択肢

--- a/app/views/characters/_select_character.html.erb
+++ b/app/views/characters/_select_character.html.erb
@@ -1,1 +1,3 @@
-<%= select :main_character, :character_id, @characters, {:include_blank => true}, class: "image-picker show-html form-control" %>
+<div id="character-id">
+  <%= select :main_character, :character_id, @characters, {:include_blank => true}, {:class => "image-picker show-html form-control"} %>
+</div>
