--- a/app/views/characters/select_titles.js.erb
+++ b/app/views/characters/select_titles.js.erb
@@ -1,1 +1,1 @@
-$('#select-character').html("<%= escape_javascript( render 'select_character') %>");
+$('#select-character').html("<%= escape_javascript( render 'select_character', object: @characters) %>");
