キャラ新規作成完了

--- a/app/assets/stylesheets/characters.scss
+++ b/app/assets/stylesheets/characters.scss
@@ -21,6 +21,7 @@ div.selected {
   }
 }
 
-#title-one {
-  margin-top: 200px;
+#main_character, #sub_characters {
+  min-height: 100px;
+  margin: 50 auto;
 }
