--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -80,6 +80,10 @@ p {
   box-sizing:         border-box;
 }
 
+.modal-dialog-center {
+  padding-top: 10%;
+}
+
 /* error_messages */
 
 #error_explanation {
