--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
 	        color: #fff;
 	      }
 	      
+	      div.modal-content {
+          background-color: #223;
+        }
+	      
 	      select {
 	        background-color: #223;
 	      }
