--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,35 @@
   <%= link_to "大会に参加する", '#', class: "btn btn-lg btn-primary" %>
   <%= link_to "使用キャラを登録・更新する", new_user_character_path(@user), class: "btn btn-lg btn-primary" %>
   <div>現在参加中の大会</div>
+  
+  <div id="character-images">
+    <% @characters.each do |character| %>
+      <span><%= character.game_title %></span>
+      <div class="game-titles">
+        <div class="show-character-area-main">
+          <span>メインキャラクター</span><br>
+          <div class="character-image">
+            <%= image_tag "/Character/#{characterimage_from_character(character.main_character)}.png", class: "character-image-main" %>
+          </div>
+        </div>
+        <div class="show-character-area-subs">
+          <span>サブキャラクター</span><br>
+          <div class="character-image-sub-index">
+            <% if character.sub_character1 %>
+              <%= image_tag "/Character/#{characterimage_from_character(character.sub_character1)}.png", class: "character-image-sub" %>
+            <% end %>
+            <% if character.sub_character2 %>
+              <%= image_tag "/Character/#{characterimage_from_character(character.sub_character2)}.png", class: "character-image-sub" %>
+            <% end %>
+            <% if character.sub_character3 %>
+              <%= image_tag "/Character/#{characterimage_from_character(character.sub_character3)}.png", class: "character-image-sub" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
+
+<script>
+</script>
