--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,4 +7,8 @@
   <div class="col-md-6 col-md-offset-3">
     <%= render 'form' %>
   </div>
+  
+  <p>
+    <%= link_to "Twitterで登録する", "/auth/twitter", method: :post %>
+  </p>
 </div>
