--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <!--<link rel="stylesheet" href="build/css/bootstrap-datetimepicker.min.css"> !-->
     <!-- HTML shimがこの1行で収まる -->
     <%= render 'layouts/shim' %>
+    <link rel="stylesheet" href="bootstrap-datetimepicker.min.css">
+    <script src="bootstrap-datetimepicker.min.js"></script>
     
     <style type="text/css">
 	    <!--
@@ -30,10 +32,63 @@
 	        background-color: #223;
 	      }
 	      
-	     .form-control:valid {
+	      .form-control:valid {
           background-color: #223!important;
           color: #fff;
         }
+        
+        div.bootstrap-datetimepicker-widget.dropdown-menu.usetwentyfour.top {
+          background-color: #111;
+          color: #fff;
+          width: 240px;
+        }
+        
+        .datepicker-days th.dow:first-child,
+        .datepicker-days td:first-child {
+            color: #f00;
+        }
+        .datepicker-days th.dow:last-child,
+        .datepicker-days td:last-child {
+            color: #00f;
+        }
+    
+        .bootstrap-datetimepicker-widget table td.active,
+        .bootstrap-datetimepicker-widget table td.active:hover {
+          background-color: #444;
+          color: #888;
+          text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+        }
+    
+        .bootstrap-datetimepicker-widget table td.day,
+        .bootstrap-datetimepicker-widget table td.day:hover,
+        .bootstrap-datetimepicker-widget table td.i.active, {
+          background-color: #400;
+          color: #888;
+          text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+        }
+        
+        .datepicker-days table tbody tr td.day.active {
+          color: #ccc;
+          background-color: #888;
+        }
+        
+        table.table thead tr th.prev:hover, 
+        table.table-condensed thead tr th.prev:hover,
+        table.table thead tr th.picker-switch:hover, 
+        table.table-condensed thead tr th.picker-switch:hover, 
+        table.table thead tr th.next:hover, 
+        table.table-condensed thead tr th.next:hover, 
+        table.table-condensed tbody tr td span:hover,
+        table.table-condensed tr td a span.fa:hover,
+        table.table-condensed tr td span:hover,
+        table.table-condensed tr td.hour:hover,
+        table.table-condensed tr td.minute:hover,
+        table.table-condensed tr td.second:hover,
+        .datepicker-days table tbody tr td.day:hover, 
+        .timepicker-picker table tbody tr td.span:hover {
+          background-color: #444;
+        }
+        
 	    !-->
 	  </style>
   </head>
@@ -48,4 +103,5 @@
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
+  
 </html>
