--- a/app/views/tournaments/_form.html.erb
+++ b/app/views/tournaments/_form.html.erb
@@ -55,11 +55,21 @@
     <%#= f.check_box :hold_third_place_match %><span>3位決定戦を行う</span>
   </div>
 !-->
-  <div class='input-group date datepicker'>
+  <div class="input-group" data-target-input="nearest">
     <%= f.label :start_time, class: "label-#{yield(:class_text)}" %>
-    <%= f.text_field :start_time, class: "form-control datetimepicker-input", id: "start_time", data: {toggle: "datetimepicker", target: "#start_time"} %>
-    <span class="input-group-addon">
+    <%= f.text_field :start_time, id: "start_time", class: "form-control datepicker", data: {target: "#start_time"} %>
+    <div class="input-group-append" data-target="#start_time" data-toggle="datetimepicker">
+        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+    </div>
   </div>
 
   <%= f.submit yield(:button_text), class: "btn btn-primary btn-block btn-#{yield(:class_text)}" %>
 <% end %>
+
+<script>
+  $(function () {
+    $('.datepicker').datetimepicker({
+      format: 'YYYY-MM-DD HH:mm:00'
+    });
+  });
+</script>
