finish correct-using-character

--- a/app/views/characters/_select_main_character.html.erb
+++ b/app/views/characters/_select_main_character.html.erb
@@ -1,1 +1,1 @@
-<%= select :main_character, :character_id, @characters, {:include_blank => true}, {:class => "image-picker show-html form-control"} %>
+<%= select :main_character, :character_id, @characters, {:include_blank => true}, {:id => "main", :class => "image-picker show-html form-control"} %>
