--- a/app/views/characters/_select_sub_characters.html.erb
+++ b/app/views/characters/_select_sub_characters.html.erb
@@ -1,1 +1,1 @@
-<%= select :sub_characters, :character_ids, @characters, {:include_blank => true}, {:multiple => true, :size => 2, :class => "image-picker show-html form-control"} %>
+<%= select :sub_characters, :character_ids, @characters, {:include_blank => true}, {:multiple => true, :size => 2, :id => "subs", :class => "image-picker show-html form-control"} %>
