--- a/app/views/characters/select_titles.js.erb
+++ b/app/views/characters/select_titles.js.erb
@@ -1,2 +1,3 @@
+$('#using-character').html('<%= escape_javascript( render 'using_character', object: @character) %>');
 $('#main-character').html('<%= escape_javascript( render 'select_main_character', object: @characters) %>');
 $('#sub-characters').html('<%= escape_javascript( render 'select_sub_characters', object: @characters) %>');
