--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,8 @@
 <div>
   <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-lg btn-success" %>
   <%= link_to "大会に参加する", '#', class: "btn btn-lg btn-primary" %>
-  <%= link_to "使用キャラを登録・更新する", new_user_character_path(@user), class: "btn btn-lg btn-primary" %>
-  <div>現在参加中の大会</div>
+  <%= link_to "使用キャラを登録・更新する", user_characters_edit_path(@user), class: "btn btn-lg btn-primary" %>
+  <div>使用キャラ</div>
   
   <div id="character-images">
     <% @characters.each do |character| %>
