--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -6,7 +6,7 @@
     <%= form_with(model: @participant, url: tournament_participants_path, local: true, method: :post) do |f| %>
 
       <%= f.label '参加者追加' %>
-      <%= select_tag :players, options_from_collection_for_select(User.all, :id, :name), include_blank: true, multiple: true, class: "form-control searchable" %>
+      <%= select_tag :players, options_from_collection_for_select(@users, :id, :name), include_blank: true, multiple: true, class: "form-control searchable" %>
       <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
     <% end %>
   </div>
