使用不能になったためcloneし直し。また軽微な問題修正

--- a/app/views/characters/select_titles.js.erb
+++ b/app/views/characters/select_titles.js.erb
@@ -1,4 +1,4 @@
-<% if @character %>
+<% if @characters %>
   $('#using-character').show();
   $('#characters').show();
   $('#using-character').html('<%= escape_javascript( render 'using_character', object: @character) %>');
