--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -41,7 +41,7 @@
         <td><%= link_to User.find(participant.user_id).name, User.find(participant.user_id) %></td>
         <td>
           <%# if current_user.admin? && !current_user?(user) %>
-            <%#= link_to "削除", user, method: :delete,
+            <%= link_to "削除", tournament_participant_path(participant), method: :delete,
                 data: { confirm: "削除してよろしいですか？" },
                 class: "btn btn-danger" %>
           <%# end %>
@@ -53,7 +53,7 @@
   <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
 
     <%= f.label '参加者追加' %>
-    <%= select_tag :players, options_from_collection_for_select(@users, :id, :name), include_blank: true, multiple: true, class: "form-control searchable" %>
+    <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), include_blank: true, multiple: true, class: "form-control searchable" %>
     <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
   <% end %>
 </div>
