--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,15 +1,15 @@
 <% provide(:title, @tournament.name) %>
 <div class="col-md-12">
   <% unless @started %>
-    <%= link_to "参加者の追加", new_tournament_participant_path(@tournament), class: "btn btn-lg btn-success" %>
+    <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-primary" %>
   <% end %>
-  <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary"%>
-
+  <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary" %>
+  
   <table class="table table-condensed table-hover" id="table-tournament">
     <thead>
       <tr>
         <% unless @participants.blank? %>
-          <th><%= image_tag @t.live_image_url, width: "100%", class: "mx-auto" %></th>
+          <th><%= image_tag @t.live_image_url, :width => "100%", class: "mx-auto" %></th>
         <% else %>
           <th>参加者が登録されていないため参加者の追加を行ってください。</th>
         <% end %>
@@ -33,6 +33,12 @@
             <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %><%= link_to "勝敗報告をする", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success" %><br>
           <% end %>
         </th>
+        <th>
+          終了済みのマッチ<br>
+          <% @matches_complete.each do |matches| %>
+            <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %><%= link_to "報告をやり直す", tournament_reset_match_path(@tournament, matches), method: :get, data: { confirm: "やり直しをしてもいいですか？" }, class: "btn btn-primary" %><br>
+          <% end %>
+        </th>
       </tr>
     </thead>
 
@@ -41,7 +47,7 @@
         <td><%= link_to User.find(participant.user_id).name, User.find(participant.user_id) %></td>
         <td>
           <%# if current_user.admin? && !current_user?(user) %>
-            <%= link_to "削除", tournament_participant_path(participant), method: :delete,
+            <%= link_to "削除", tournament_participant_path(@tournament, participant), method: :delete,
                 data: { confirm: "削除してよろしいですか？" },
                 class: "btn btn-danger" %>
           <%# end %>
@@ -50,11 +56,12 @@
     <% end %>
   </table>
   
-  <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
-
-    <%= f.label '参加者追加' %>
-    <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), include_blank: true, multiple: true, class: "form-control searchable" %>
-    <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
+  <% unless @started %>
+    <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
+      <%= f.label '参加者追加' %>
+      <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), include_blank: true, multiple: true, class: "form-control searchable" %>
+      <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
+    <% end %>
   <% end %>
 </div>
   
